test/files/neg/volatile_no_override.check
volatile_no_override.scala:13: error: overriding val x: Volatile.this.D (defined in class A);
 val x: Volatile.this.A with Volatile.this.D has a volatile type; cannot override a member with non-volatile type
  val x: A with D = null
      ^
one error found
